// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Story/How to create a story built as string 1`] = `
<div
  data-is="root"
  id="root"
>
  <test>
    <div>
      simple test
    </div>
  </test>
</div>
`;

exports[`Storyshots Story/How to create a story built from raw import 1`] = `
<div
  data-is="simpletest"
  id="root"
>
  <div>
    simple test (without parameter). Oh, by the way (... well, nothing)
  </div>
</div>
`;

exports[`Storyshots Story/How to create a story built from tags and template 1`] = `
<div
  data-is="root"
  id="root"
>
  <simpletest
    test="with a parameter"
  >
    <div>
      simple test (with a parameter). Oh, by the way (value is mapped to riotValue)
    </div>
  </simpletest>
</div>
`;

exports[`Storyshots Story/How to create a story built from the precompilation 1`] = `
<div
  data-is="anothertest"
  id="root"
>
  <div>
    yet another test, precompiled this time (WARN, only works in lower case, never upper case with precompiled templates)
  </div>
</div>
`;

exports[`Storyshots Story/How to create a story built with tag 1`] = `
<div
  data-is="test"
  id="root"
>
  <div>
    simple test (with a parameter)
  </div>
</div>
`;

exports[`Storyshots Story/How to create a story tags, template and tagConstructor at once 1`] = `
<div
  data-is="root"
  id="root"
>
  <simpletest
    hacked="true"
    test="with a parameter"
  >
    <div>
      HACKED : true ; simple test (with a parameter). Oh, by the way (value is mapped to riotValue)
    </div>
  </simpletest>
</div>
`;

exports[`Storyshots Story/How to create a story the mount instruction is not necessary 1`] = `
<div
  data-is="anothertest"
  id="root"
>
  <div>
    yet another test, precompiled this time (WARN, only works in lower case, never upper case with precompiled templates)
  </div>
</div>
`;

exports[`Storyshots Story/How to create a story the opts value is not necessary 1`] = `
<div
  data-is="anothertest"
  id="root"
>
  <div>
    yet another test, precompiled this time (WARN, only works in lower case, never upper case with precompiled templates)
  </div>
</div>
`;
